# grammar-drill-anki

./: .gitignore  CLAUDE.md  Makefile  README.md  __init__.py  gemini_client.py  pyproject.toml  request-task-from-python.js  request-task-review-to-python.js
config/: config_loader.py  read_env.py
data/: base_response_mobel.py  models.py  parse_data.py  prompts.py
src/config/: config_loader.py  read_env.py
src/core/: create_task.py  review_task.py
src/data/: base_request_data.py  english_data.py  models.py
src/db/: database.py  db_writer.py
src/db/service/: condition.py  review.py  word.py
src/db/tables/: _table.py  conditions.py  reviews.py  words.py
src/llm/: deepseek.py  gemini.py
src/utils/: path.py
src/utils/logs/: api_logs.py  func.py
utils/logs/: api_logs.py  logger.py
