[project]
name = "Anki"
description = "This project provides some tools that could be helpful for learning something with Anki"
requires-python = ">=3.13.5"

[tool.logging.default]
format = "# {levelname:<8} | {asctime}.{msecs:03.0f} | {name:<15} | {lineno:^4} | {message}"
datefmt = "%d.%m.%Y %H:%M:%S"
style = "{"
stream = 1
request_headers = 1  # Enable logging http request headers: 1 = on, 0 = off
response_headers = 0 # Enable logging http response headers: 1 = on, 0 = off

[tool.ruff]
line-length = 120
target-version = "py313"
output-format = "concise"

exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "reports",
    "logs",
    "sandbox",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (ошибки стиля)
    "W",    # pycodestyle (предупреждения стиля)
    "F",    # pyflakes (неиспользуемый импорт, переменные и т.д.)
    "I",    # isort (импорты)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade (современный синтаксис)
    "N",    # pep8-naming (соглашения по именованию)
]

[tool.ruff.lint.isort]
combine-as-imports = true
length-sort = true

[tool.ruff.lint.per-file-ignores]
"cards_view" = ["ALL"]
"data" = ["ALL"]
"parse_words" = ["ALL"]
"addons/review_grammar/src/data/english_data.py" = ["E501"]
"addons/review_grammar/src/data/prompts.py" = ["E501"]
