[project]
name = "grammar_drill"
description = "Anki addon that generates English grammar tasks and checks answers via Gemini / DeepSeek AI"
requires-python = ">=3.13"

[tool.logging.default]
format = "# {levelname:<8} | {asctime}.{msecs:03.0f} | {name:<15} | {lineno:^4} | {message}"
datefmt = "%d.%m.%Y %H:%M:%S"
style = "{"
stream = 1
request_headers = 1  # Enable logging http request headers: 1 = on, 0 = off
response_headers = 0 # Enable logging http response headers: 1 = on, 0 = off

[tool.ruff]
line-length = 120
target-version = "py313"
output-format = "concise"

exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "sandbox",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (ошибки стиля)
    "W",    # pycodestyle (предупреждения стиля)
    "F",    # pyflakes (неиспользуемый импорт, переменные и т.д.)
    "I",    # isort (импорты)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade (современный синтаксис)
    "N",    # pep8-naming (соглашения по именованию)
]

[tool.ruff.lint.isort]
combine-as-imports = true
length-sort = true

[tool.ruff.lint.per-file-ignores]
"src/data/english_data.py" = ["E501"]
"src/data/prompts.py" = ["E501"]
